Updated release guide and added artifact verification docs